--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,15 +1,47 @@
+/* Monosocial Icons */
+@font-face {
+    font-family: 'Mono Social Icons Font';
+    src: url('MonoSocialIconsFont-1.10.eot');
+    src: url('MonoSocialIconsFont-1.10.eot?#iefix') format('embedded-opentype'),
+         url('MonoSocialIconsFont-1.10.woff') format('woff'),
+         url('MonoSocialIconsFont-1.10.ttf') format('truetype'),
+         url('MonoSocialIconsFont-1.10.svg#MonoSocialIconsFont') format('svg');
+    src: url('MonoSocialIconsFont-1.10.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+.symbol, a.symbol:before {
+    font-family: 'Mono Social Icons Font';
+    -webkit-text-rendering: optimizeLegibility;
+    -moz-text-rendering: optimizeLegibility;
+    -ms-text-rendering: optimizeLegibility;
+    -o-text-rendering: optimizeLegibility;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing: antialiased;
+    -ms-font-smoothing: antialiased;
+    -o-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+}
+a.symbol:before {
+    content: attr(title);
+    margin-right: 0.3em;
+    font-size: 130%;
+}
+/* =================== */
+
+/* Bootstrap Overwrite */
 .name-title {
-    text-align: center;
+  text-align: center;
 }
 .description-sub {
-    text-align: center;
-    color: #1ABC9C;
+  text-align: center;
+  color: #1ABC9C;
 }
-
 .min-width {
-    min-width: 800px;
+  min-width: 800px;
 }
-
 .home-nav {
-    background: #34495E;
+  background: #34495E;
 }
+/* =================== */
