Missing font files for Monosocial

--- a/app/views/homeView.html
+++ b/app/views/homeView.html
@@ -60,7 +60,7 @@
         <div class="col-lg-6" style="padding-top:30px; text-align:center">
           <h5 style="margin:auto">Hiring?</h5>
           <p style="margin:auto; padding:10px 0px">
-	      	At the University of Waterloo, we are given the opportunity to complete 2 years of paid work experience through 4-month internships. In my past internships, I have had the privilege to work with some of the leaders in mobile at <a href="http://www.sap.com/pc/tech/mobile.html">SAP Mobile</a>, <a href="http://www.xtremelabs.com/">Xtreme Labs</a>, and <a href="http://www.gopivotal.com">Pivotal</a>. Feel free to contact me about future internship opportunities.
+	      	At the University of Waterloo, we are given the opportunity to complete 2 years of paid work experience through 4-month internships. In past internships, I've had the privilege to work with some of the leaders in mobile at <a href="http://www.sap.com/pc/tech/mobile.html">SAP Mobile</a>, <a href="http://www.xtremelabs.com/">Xtreme Labs</a>, and <a href="http://www.gopivotal.com">Pivotal</a>. Feel free to contact me about future internship opportunities.
           </p>
           <p style="margin:auto"><a class="btn btn-primary" href="https://uwaterloo.ca/hire/">View Details »</a></p>
         </div>
