Added footer to the home page

--- a/app/views/homeView.html
+++ b/app/views/homeView.html
@@ -65,4 +65,7 @@
           <p style="margin:auto"><a class="btn btn-primary" href="https://uwaterloo.ca/hire/">View Details »</a></p>
         </div>
 </div>
-<br/>
+
+<br><hr>
+<div style="text-align:center;font-size:10px;color:gray">2013</div>
+<br>
