Adding more controllers and directives

--- a/app/views/homeView.html
+++ b/app/views/homeView.html
@@ -1,34 +1,4 @@
-<ul class="nav nav-justified">
-	<li class="home-nav active">
-		<a href="">
-	    	<span class="fui-cmd"></span>
-	    	<span>Home</span>
-		</a>
-	</li>
-	<li class="home-nav">		
-		<a href="#">
-	    	<span class="fui-user"></span>
-	    	<span> Resume</span>
-		</a></li>
-	<li class="home-nav">
-		<a href="#">
-	    	<span class="fui-photo"></span>
-	    	<span> My Photos</span>
-		</a></li>
-	</li>
-	<li class="home-nav">
-		<a href="#">
-	    	<span class="fui-video"></span>
-	    	<span> My Videos</span>
-		</a></li>
-	</li>
-	<li class="home-nav">
-		<a href="#">
-	    	<span class="fui-mail"></span>
-	    	<span> Contact Me</span>
-		</a></li>
-	</li>
-</ul>
+<navigation></navigation>
 
 <div class="col-md-12" style="padding:0">
 	<img src="images/home-banner.JPG" alt="exaple-image" class="img-responsive">
