--- a/app/views/contactView.html
+++ b/app/views/contactView.html
@@ -1,1 +1,5 @@
-<p>This is the contactView view.</p>
+<navigation></navigation>
+
+<div class="col-md-12" style="padding:0">
+	<p>This is the contactView view.</p>
+</div>
