--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -50,4 +50,10 @@ a.symbol:before {
 .active {
 	background: #2C3E50;
 }
+
+.nav > li > a:hover,
+.nav > li > a:focus {
+  text-decoration: none;
+  background-color: #2C3E50;
+}
 /* =================== */
