--- a/app/views/contactView.html
+++ b/app/views/contactView.html
@@ -1,27 +1,3 @@
-<br>
-<div class="login">
-	<div class="login-screen">
-		<div class="login-icon">
-	    	<img src="images/login/icon.png" alt="Welcome to Mail App">
-	    	<h4>Send me <small>An Email</small></h4>
-	  	</div>
-
-		<div class="login-form">
-	    	<div class="form-group">
-	      		<input type="email" class="form-control login-field" value="" placeholder="Email Address" id="email-address">
-	      		<label class="login-field-icon fui-mail" for="login-name"></label>
-	   		</div>
-
-	   		<div class="form-group">
-	      		<input type="text" class="form-control login-field" value="" placeholder="Full Name" id="login-name">
-	      		<label class="login-field-icon fui-user" for="login-name"></label>
-	   		</div>
-
-	    	<div class="form-group">
-	      		<textarea class="form-control login-field" value="" placeholder="Message" id="login-pass"></textarea>
-	    	</div>
-
-	    	<a class="btn btn-primary btn-lg btn-block" href="#">Send</a>
-	  	</div>
-	</div>
+<div style="text-align:center;padding-top:60px">
+	Under Constructon. Please Check Back Soon.
 </div>
