Added photo and video controllers and views

--- a/app/views/navigation.html
+++ b/app/views/navigation.html
@@ -1,6 +1,6 @@
 <div class="col-md-12 hover-styling" style="padding:0">
 	<ul class="nav nav-justified">
-		<li class="home-nav" ng-class="{active: }" ng-click="setActive()">
+		<li class="home-nav" ng-click="setActive()">
 			<a href="#/">
 		    	<span class="fui-cmd"></span>
 		    	<span>Home</span>
@@ -12,13 +12,13 @@
 		    	<span> Resume</span>
 			</a></li>
 		<li class="home-nav" ng-click="setActive()">
-			<a href="#">
+			<a href="#/photo">
 		    	<span class="fui-photo"></span>
 		    	<span> My Photos</span>
 			</a></li>
 		</li>
 		<li class="home-nav" ng-click="setActive()">
-			<a href="#">
+			<a href="#/video">
 		    	<span class="fui-video"></span>
 		    	<span> My Videos</span>
 			</a></li>
