--- a/app/views/homeView.html
+++ b/app/views/homeView.html
@@ -11,10 +11,9 @@
 		<a href='http://instagram.com/zhihaomai' class='symbol' title='circleinstagram'></a>
 	</div>
 	<div>Candidate for Bachelor of Software Engineering at the University of Waterloo. I am passionate about mobile application development and creating software that impact many end users.</div>
-	<br/>
 
 	<div class="row">
-		<div class="col-lg-6" style="padding-top:30px">
+		<div class="col-lg-6" style="padding-top:50px">
 			<h5 style="margin:auto">Why Software?</h5>
 			<p style="margin:auto; padding:10px 0px">
 				Growing up, I have had summer jobs working as a restaurant busboy, student custodian, and city graffiti remover. While the experiences were all valuable, the one takeaway I got from all three jobs were that I hated repetitive work. For my career, I wanted to do something that allowed me to create and challenged me day in and day out. 
@@ -23,10 +22,10 @@
 				<a class="btn btn-primary" href="http://www.linkedin.com/pub/zhihao-mai/54/603/a91">Let's Connect »</a>
 			</p>
 		</div>
-		<div class="col-lg-6" style="padding-top:30px">
+		<div class="col-lg-6" style="padding-top:50px">
 			<h5 style="margin:auto">Hiring?</h5>
 			<p style="margin:auto; padding:10px 0px">
-				At the University of Waterloo, we are given the opportunity to complete 2 years of paid work experience through 4-month internships. In past internships, I've had the privilege to work with some of the leaders in mobile at <a href="http://www.sap.com/pc/tech/mobile.html">SAP Mobile</a>, <a href="http://www.xtremelabs.com/">Xtreme Labs</a>, and <a href="http://www.gopivotal.com">Pivotal</a>. Feel free to contact me about future internship opportunities.
+				At the University of Waterloo, we have the opportunity to complete 2 years of paid work experience through 4-month internships. In past internships, I've had the privilege to work with some of the leaders in mobile at <a href="http://www.sap.com/pc/tech/mobile.html">SAP Mobile</a>, <a href="http://www.xtremelabs.com/">Xtreme Labs</a>, and <a href="http://www.gopivotal.com">Pivotal</a>. Feel free to contact me about future internship opportunities.
 			</p>
 			<p style="margin:auto"><a class="btn btn-primary" href="https://uwaterloo.ca/hire/">View Details »</a></p>
 		</div>
