--- a/app/views/photoView.html
+++ b/app/views/photoView.html
@@ -1,3 +1,6 @@
-<div style="text-align:center;padding-top:60px">
-	Under Constructon. Please Check Back Soon.
+<br>
+<div class="row">
+  <div class="col-sm-6 col-md-4" ng-repeat="photo in photos">
+    <photoblock></photoblock>
+  </div>
 </div>
