--- a/app/views/navigation.html
+++ b/app/views/navigation.html
@@ -17,12 +17,12 @@
 		    	<span> My Photos</span>
 			</a></li>
 		</li>
-		<li class="home-nav" ng-class="{ active: isActive('/video') }">
+<!-- 		<li class="home-nav" ng-class="{ active: isActive('/video') }">
 			<a href="#/video">
 		    	<span class="fui-video"></span>
 		    	<span> My Videos</span>
 			</a></li>
-		</li>
+		</li> -->
 		<li class="home-nav" ng-class="{ active: isActive('/contact') }">
 			<a href="#/contact">
 		    	<span class="fui-mail"></span>
