--- a/app/views/resumeView.html
+++ b/app/views/resumeView.html
@@ -1,3 +1,2 @@
-<div style="text-align:center;padding-top:60px">
-	Under Constructon. Please Check Back Soon.
-</div>
+<br>
+<iframe src="http://docs.google.com/viewer?url=http://www.ub-careers.buffalo.edu/rsample1p.pdf&embedded=true" width="100%" height="1500" style="border: none;"></iframe>
