Implemented Two Tab Functionalities

--- a/views/photoView.html
+++ b/views/photoView.html
@@ -1,3 +1,7 @@
-<div style="text-align:center;padding-top:60px">
-	Under Constructon. Please Check Back Soon.
+<br>
+<div class="row">
+  <div class="col-sm-6 col-md-4" ng-repeat="photo in photos">
+    <photoblock></photoblock>
+  </div>
 </div>
+<div class="col-md-12" style="text-align:center; font-size:10px">Disclaimer: I do not take credit for these pictures. These are placeholder photos and information until my personal website server is properly running.</div>
