Finished implementing Contact Me Page

--- a/app/views/contactView.html
+++ b/app/views/contactView.html
@@ -1,44 +1,57 @@
 <br>
-<div class="ss-form-container"><div class="ss-form-heading"><h1 class="ss-form-title">Contact Form</h1>
-<p></p>
-<div class="ss-form-desc ss-no-ignore-whitespace" style="
-    color: red;
-">We appreciate your effort and time, please fill in the  following</div>
+<div class="ss-form-container col-md-12">
+	<div class="ss-form-heading" style="display:inline-block; text-align:center">
+		<img src="images/icons/svg/mail.svg" style="float: left" alt="Mail">
+		<h3 class="ss-form-title" style="float:left; padding-left:40px ">Contact Me</h3>
+		<p></p>
+	</div>
+	<div class="ss-form-desc ss-no-ignore-whitespace" style="color:#1ABC9C">
+		Feel free to send me a message and I will respond as soon as possible.
+	</div>
 
-<hr class="ss-email-break" style="display:none;">
-<div class="ss-required-asterisk">* Required</div></div>
-<div class="ss-form"><form action="https://docs.google.com/spreadsheet/formResponse?formkey=dHJKN0I0bEJqbEtIRHdDNVM2Vmxnamc6MA&amp;embedded=true&amp;ifq" method="POST" id="ss-form">
+	<hr class="ss-email-break" style="display:none;">
+	<hr>
+	<div class="ss-required-asterisk">* Required</div>
 
+	<div class="ss-form">
+		<form action="https://docs.google.com/spreadsheet/formResponse?formkey=dHJKN0I0bEJqbEtIRHdDNVM2Vmxnamc6MA&amp;embedded=true&amp;ifq" method="POST" id="ss-form">
+			<div class="errorbox-good">
+				<div class="ss-item ss-item-required ss-text">
+					<div class="ss-form-entry" style="padding-top:20px">
+						<label class="ss-q-title" for="entry_0" style="color:#1ABC9C">Name
+							<span class="ss-required-asterisk">*</span>
+						</label>
+						<input class="form-control login-field" type="text" name="entry.0.single" value="" placeholder="Enter your name" class="ss-q-short" id="entry_0">
+					</div>
+				</div>
+			</div>
+			<br> 
+			<div class="errorbox-good">
+				<div class="ss-item ss-item-required ss-text">
+					<div class="ss-form-entry">
+						<label class="ss-q-title" for="entry_1" style="color:#1ABC9C">Your Contact Info
+							<span class="ss-required-asterisk">*</span>
+						</label>
+						<input class="form-control login-field" type="text" name="entry.1.single" value="" placeholder="Enter your E-mail" class="ss-q-short" id="entry_1">
+					</div>
+				</div>
+			</div>
+			<br>
+			<div class="errorbox-good">
+				<div class="ss-item ss-item-required ss-paragraph-text">
+					<div class="ss-form-entry">
+						<label class="ss-q-title" for="entry_2" style="color:#1ABC9C">Feedback
+							<span class="ss-required-asterisk">*</span>
+						</label>
+						<textarea class="form-control" name="entry.2.single" rows="8" cols="75" placeholder="Enter your message here" class="ss-q-long" id="entry_2" style="resize:none"></textarea>
+					</div>
+				</div>
+			</div>
+			<br>
+			<input type="hidden" name="pageNumber" value="0">
+			<input type="hidden" name="backupCache" value="">
 
-<br>
-<div class="errorbox-good">
-<div class="ss-item ss-item-required ss-text"><div class="ss-form-entry"><label class="ss-q-title" for="entry_0">Name
-<span class="ss-required-asterisk">*</span></label>
-<label class="ss-q-help" for="entry_0"> Enter your name</label>
-<input type="text" name="entry.0.single" value="" class="ss-q-short" id="entry_0"></div></div></div>
-<br> <div class="errorbox-good">
-<div class="ss-item ss-item-required ss-text"><div class="ss-form-entry"><label class="ss-q-title" for="entry_1">Your Contact Info
-<span class="ss-required-asterisk">*</span></label>
-<label class="ss-q-help" for="entry_1">Enter your Email</label>
-<input type="text" name="entry.1.single" value="" class="ss-q-short" id="entry_1"></div></div></div>
-<br> <div class="errorbox-good">
-<div class="ss-item ss-item-required ss-paragraph-text"><div class="ss-form-entry"><label class="ss-q-title" for="entry_2">Feedback
-<span class="ss-required-asterisk">*</span></label>
-<label class="ss-q-help" for="entry_2">Provide your feedback</label>
-<textarea name="entry.2.single" rows="8" cols="75" class="ss-q-long" id="entry_2"></textarea></div></div></div>
-<br>
-<input type="hidden" name="pageNumber" value="0">
-<input type="hidden" name="backupCache" value="">
-
-<input type="submit" name="submit" value="Submit">
-<!-- <div class="ss-item ss-navigate"><div class="ss-form-entry">
-
-<div class="password-warning">Never submit passwords through Google Forms.</div></div></div></form>
+			<input class="btn btn-primary" type="submit" name="submit" value="Submit">
+		</form>
+	</div>
 </div>
-<div class="ss-footer"><div class="ss-attribution"></div>
-<div class="ss-legal"><span class="ss-powered-by">Powered by <a href="http://docs.google.com">Google Docs</a></span>
-<span class="ss-terms"><small><a href="https://docs.google.com/spreadsheet/reportabuse?formkey=dHJKN0I0bEJqbEtIRHdDNVM2Vmxnamc6MA&amp;source=https://docs.google.com/spreadsheet/embeddedform?formkey%3DdHJKN0I0bEJqbEtIRHdDNVM2Vmxnamc6MA">Report Abuse</a>
--
-<a href="http://www.google.com/accounts/TOS">Terms of Service</a>
--
-<a href="http://www.google.com/google-d-s/terms.html">Additional Terms</a></small></span></div></div></div> -->
