Final touchups to disclaimer messages and footer copyright

--- a/app/views/contactView.html
+++ b/app/views/contactView.html
@@ -18,7 +18,7 @@
 			<div class="errorbox-good">
 				<div class="ss-item ss-item-required ss-text">
 					<div class="ss-form-entry" style="padding-top:20px">
-						<label class="ss-q-title" for="entry_0" style="color:#1ABC9C">Name
+						<label class="ss-q-title" for="entry_0">Name
 							<span class="ss-required-asterisk">*</span>
 						</label>
 						<input class="form-control login-field" type="text" name="entry.0.single" value="" placeholder="Enter your name" class="ss-q-short" id="entry_0">
@@ -29,7 +29,7 @@
 			<div class="errorbox-good">
 				<div class="ss-item ss-item-required ss-text">
 					<div class="ss-form-entry">
-						<label class="ss-q-title" for="entry_1" style="color:#1ABC9C">Your Contact Info
+						<label class="ss-q-title" for="entry_1">Your Contact Info
 							<span class="ss-required-asterisk">*</span>
 						</label>
 						<input class="form-control login-field" type="text" name="entry.1.single" value="" placeholder="Enter your E-mail" class="ss-q-short" id="entry_1">
@@ -40,7 +40,7 @@
 			<div class="errorbox-good">
 				<div class="ss-item ss-item-required ss-paragraph-text">
 					<div class="ss-form-entry">
-						<label class="ss-q-title" for="entry_2" style="color:#1ABC9C">Feedback
+						<label class="ss-q-title" for="entry_2">Feedback
 							<span class="ss-required-asterisk">*</span>
 						</label>
 						<textarea class="form-control" name="entry.2.single" rows="8" cols="75" placeholder="Enter your message here" class="ss-q-long" id="entry_2" style="resize:none"></textarea>
