--- a/app/views/resumeView.html
+++ b/app/views/resumeView.html
@@ -1,2 +1,3 @@
 <br>
 <iframe src="http://docs.google.com/viewer?url=http://www.ub-careers.buffalo.edu/rsample1p.pdf&embedded=true" width="100%" height="1500" style="border: none;"></iframe>
+<div class="col-md-12" style="text-align:center; font-size:12px; color:red">Disclaimer: This is a placeholder resume, not my resume. I will upload a real resume shortly.</div>
