--- a/views/photoView.html
+++ b/views/photoView.html
@@ -4,4 +4,4 @@
     <photoblock></photoblock>
   </div>
 </div>
-<div class="col-md-12" style="text-align:center; font-size:10px">Disclaimer: I do not take credit for these pictures. These are placeholder photos and information until my personal website server is properly running.</div>
+<div class="col-md-12" style="text-align:center; font-size:12px; color:red">Disclaimer: These are not my photos. Photo blocks are currently holding placeholder information until my server is up.</div>
