Added headers to contact, photo, and resume pages

--- a/app/views/photoView.html
+++ b/app/views/photoView.html
@@ -1,4 +1,11 @@
 <br>
+<div class="col-md-12" style="text-align:center">
+	<div class="ss-form-heading col-md-12" style="text-align:center">
+		<img style="display:inline-block; padding:10px; vertical-align:middle" src="images/icons/svg/map.svg" alt="Pictures">
+		<h1 style="display:inline-block; padding:10px; margin:0; vertical-align:middle">PHOTOS</h1>
+	</div>
+	<hr>
+</div>
 <div class="row">
   <div class="col-sm-6 col-md-4" ng-repeat="photo in photos">
     <photoblock></photoblock>
