--- a/app/views/resumeView.html
+++ b/app/views/resumeView.html
@@ -1,3 +1,9 @@
 <br>
-<iframe src="http://docs.google.com/viewer?url=http://www.ub-careers.buffalo.edu/rsample1p.pdf&embedded=true" width="100%" height="1500" style="border: none;"></iframe>
-<div class="col-md-12" style="text-align:center; font-size:12px; color:red">Disclaimer: This is a placeholder resume, not my resume. I will upload a real resume shortly.</div>
+<div class="col-md-12" style="text-align:center">
+	<div class="ss-form-heading col-md-12" style="text-align:center">
+		<img style="display:inline-block; padding:10px; vertical-align:middle" src="images/icons/svg/clipboard.svg" alt="Pictures">
+		<h1 style="display:inline-block; padding:10px; margin:0; vertical-align:middle">RESUME</h1>
+	</div>
+	<hr>
+</div>
+<iframe src="https://docs.google.com/file/d/0BzOndqQ2V47dRF84Z1VxTjZvOEk/preview" width="100%" height="1400"></iframe>
