Added headers to all subpages (photos, resume, contact)

--- a/views/contactView.html
+++ b/views/contactView.html
@@ -1,15 +1,9 @@
 <br>
-<div class="ss-form-container col-md-12">
-	<div class="ss-form-heading" style="display:inline-block; text-align:center">
-		<img src="images/icons/svg/mail.svg" style="float: left" alt="Mail">
-		<h3 class="ss-form-title" style="float:left; padding-left:40px">Contact Me</h3>
-		<p></p>
+<div class="col-md-12">
+	<div class="ss-form-heading col-md-12" style="text-align:center">
+		<img style="display:inline-block; padding:10px; vertical-align:middle" src="images/icons/svg/mail.svg" alt="Pictures">
+		<h1 style="display:inline-block; padding:10px; margin:0; vertical-align:middle">CONTACT ME</h1>
 	</div>
-	<div class="ss-form-desc ss-no-ignore-whitespace" style="color:#1ABC9C">
-		Feel free to send me a message and I will respond as soon as possible.
-	</div>
-
-	<hr class="ss-email-break" style="display:none">
 	<hr>
 	<div class="ss-required-asterisk">* Required</div>
 
