--- a/views/resumeView.html
+++ b/views/resumeView.html
@@ -1,2 +1,9 @@
 <br>
-<iframe src="https://docs.google.com/file/d/0BzOndqQ2V47dRF84Z1VxTjZvOEk/preview" width="100%" height="1000" style="border: none"></iframe>
+<div class="col-md-12" style="text-align:center">
+	<div class="ss-form-heading col-md-12" style="text-align:center">
+		<img style="display:inline-block; padding:10px; vertical-align:middle" src="images/icons/svg/clipboard.svg" alt="Pictures">
+		<h1 style="display:inline-block; padding:10px; margin:0; vertical-align:middle">RESUME</h1>
+	</div>
+	<hr>
+</div>
+<iframe src="https://docs.google.com/file/d/0BzOndqQ2V47dRF84Z1VxTjZvOEk/preview" width="100%" height="1400"></iframe>
