--- a/app/views/contactView.html
+++ b/app/views/contactView.html
@@ -1,8 +1,8 @@
 <br>
 <div class="col-md-12">
 	<div class="ss-form-heading col-md-12" style="text-align:center">
-		<img style="display:inline-block; padding:10px; vertical-align:middle" src="images/icons/svg/mail.svg" alt="Pictures">
-		<h1 style="display:inline-block; padding:10px; margin:0; vertical-align:middle">CONTACT ME</h1>
+		<img class="view-header-img" src="images/icons/svg/mail.svg" alt="Pictures">
+		<h3 class="view-header-label">CONTACT ME</h3>
 	</div>
 	<hr>
 	<div class="ss-required-asterisk">* Required</div>
