--- a/app/views/resumeView.html
+++ b/app/views/resumeView.html
@@ -1,8 +1,8 @@
 <br>
 <div class="col-md-12" style="text-align:center">
-	<div class="ss-form-heading col-md-12" style="text-align:center">
-		<img style="display:inline-block; padding:10px; vertical-align:middle" src="images/icons/svg/clipboard.svg" alt="Pictures">
-		<h1 style="display:inline-block; padding:10px; margin:0; vertical-align:middle">RESUME</h1>
+	<div class="ss-form-heading col-md-12">
+		<img class="view-header-img" src="images/icons/svg/clipboard.svg" alt="Pictures">
+		<h3 class="view-header-label">RESUME</h3>
 	</div>
 	<hr>
 </div>
