--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -27,6 +27,13 @@
   color:gray;
 }
 
+.resume-img {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid gray;
+}
+
 /* Monosocial Icons */
 /* ---------------- */
 @font-face {
