--- a/app/views/resumeView.html
+++ b/app/views/resumeView.html
@@ -6,4 +6,9 @@
 	</div>
 	<hr>
 </div>
-<iframe src="https://docs.google.com/file/d/0BzOndqQ2V47dRF84Z1VxTjZvOEk/preview" width="100%" height="1400"></iframe>
+<div class="col-md-12" style="text-align:center; font-size:14px">
+	Direct Resume Link:<br/>
+	<a href="https://docs.google.com/file/d/0BzOndqQ2V47dRF84Z1VxTjZvOEk/preview">https://docs.google.com/file/d/0BzOndqQ2V47dRF84Z1VxTjZvOEk/preview</a>
+</div>
+<br>
+<img src="https://docs.google.com/file/d/0BzOndqQ2V47dRF84Z1VxTjZvOEk/image?pagenumber=1" class="img-responsive resume-img col-md-12">
