Removed Message in Photo View

--- a/app/views/photoView.html
+++ b/app/views/photoView.html
@@ -11,4 +11,4 @@
     <photoblock></photoblock>
   </div>
 </div>
-<div class="col-md-12 disclaimer-msg">Disclaimer: These are not my photos. Photo blocks are currently holding placeholder information until my server is up.</div>
+<!-- <div class="col-md-12 disclaimer-msg">Disclaimer: These are not my photos. Photo blocks are currently holding placeholder information until my server is up.</div> -->
