Update to header views, resume display, and photo hookup

--- a/views/photoView.html
+++ b/views/photoView.html
@@ -1,8 +1,8 @@
 <br>
 <div class="col-md-12" style="text-align:center">
-	<div class="ss-form-heading col-md-12" style="text-align:center">
-		<img style="display:inline-block; padding:10px; vertical-align:middle" src="images/icons/svg/map.svg" alt="Pictures">
-		<h1 style="display:inline-block; padding:10px; margin:0; vertical-align:middle">PHOTOS</h1>
+	<div class="ss-form-heading col-md-12">
+		<img class="view-header-img" src="images/icons/svg/map.svg" alt="Pictures">
+		<h3 class="view-header-label">PHOTOS</h3>
 	</div>
 	<hr>
 </div>
@@ -11,4 +11,4 @@
     <photoblock></photoblock>
   </div>
 </div>
-<div class="col-md-12" style="text-align:center; font-size:12px; color:red">Disclaimer: These are not my photos. Photo blocks are currently holding placeholder information until my server is up.</div>
+<!-- <div class="col-md-12 disclaimer-msg">Disclaimer: These are not my photos. Photo blocks are currently holding placeholder information until my server is up.</div> -->
