--- a/views/resumeView.html
+++ b/views/resumeView.html
@@ -1,9 +1,14 @@
 <br>
 <div class="col-md-12" style="text-align:center">
-	<div class="ss-form-heading col-md-12" style="text-align:center">
-		<img style="display:inline-block; padding:10px; vertical-align:middle" src="images/icons/svg/clipboard.svg" alt="Pictures">
-		<h1 style="display:inline-block; padding:10px; margin:0; vertical-align:middle">RESUME</h1>
+	<div class="ss-form-heading col-md-12">
+		<img class="view-header-img" src="images/icons/svg/clipboard.svg" alt="Pictures">
+		<h3 class="view-header-label">RESUME</h3>
 	</div>
 	<hr>
 </div>
-<iframe src="https://docs.google.com/file/d/0BzOndqQ2V47dRF84Z1VxTjZvOEk/preview" width="100%" height="1400"></iframe>
+<div class="col-md-12" style="text-align:center; font-size:14px">
+	Direct Resume Link:<br>
+	<a href="https://docs.google.com/file/d/0BzOndqQ2V47dRF84Z1VxTjZvOEk/preview">https://docs.google.com/file/d/0BzOndqQ2V47dRF84Z1VxTjZvOEk/preview</a>
+</div>
+<br>
+<img src="https://docs.google.com/file/d/0BzOndqQ2V47dRF84Z1VxTjZvOEk/image?pagenumber=1" class="img-responsive resume-img col-md-12">
