--- a/app/views/photoView.html
+++ b/app/views/photoView.html
@@ -6,6 +6,7 @@
 	</div>
 	<hr>
 </div>
+<div class="col-md-12 loading-text" ng-class="{hide: doneLoading}">Loading Photos...</div>
 <div class="row">
   <div class="col-sm-6 col-md-4" ng-repeat="photo in photos">
     <photoblock></photoblock>
