--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,5 +1,8 @@
 /* General View Styles */
 /* ------------------- */
+.nav-item-title {
+  padding-left:5px;
+}
 
 .view-header-img {
   display:inline-block; 
