--- a/app/views/navigation.html
+++ b/app/views/navigation.html
@@ -3,18 +3,24 @@
 		<li class="home-nav" ng-class="{ active: isActive('/') }">
 			<a href="#/">
 		    	<span class="fui-cmd"></span>
-		    	<span>Home</span>
+		    	<span class="nav-item-title">Home</span>
 			</a>
 		</li>
 		<li class="home-nav" ng-class="{ active: isActive('/resume') }">		
 			<a href="#/resume">
 		    	<span class="fui-user"></span>
-		    	<span> Resume</span>
+		    	<span class="nav-item-title"> Resume</span>
 			</a></li>
+		<li class="home-nav" ng-class="{ active: isActive('/blog') }">
+			<a href="#/blog">
+		    	<span class="fui-new"></span>
+		    	<span class="nav-item-title"> Blog</span>
+			</a></li>
+		</li>
 		<li class="home-nav" ng-class="{ active: isActive('/photo') }">
 			<a href="#/photo">
 		    	<span class="fui-photo"></span>
-		    	<span> My Photos</span>
+		    	<span class="nav-item-title"> Photos</span>
 			</a></li>
 		</li>
 <!-- 		<li class="home-nav" ng-class="{ active: isActive('/video') }">
@@ -26,7 +32,7 @@
 		<li class="home-nav" ng-class="{ active: isActive('/contact') }">
 			<a href="#/contact">
 		    	<span class="fui-mail"></span>
-		    	<span> Contact Me</span>
+		    	<span class="nav-item-title"> Contact Me</span>
 			</a></li>
 		</li>
 	</ul>
