--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -107,6 +107,88 @@ a.symbol:before {
   background-color: #2C3E50;
 }
 
+/* Loading Spinner */
+/* --------------- */
+
+.spinner16 {
+    width: 60px;
+    height: 60px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
+.spinner16 ul {
+    position: relative;
+    margin: 0;
+    padding: 0;    
+}
+.spinner16 ul:after {
+    content: "";
+    clear: both;
+    display: table;
+}
+.spinner16 li {
+    margin: 0;
+    padding: 0;
+    height: 20px;
+    width: 20px;    
+    list-style: none;    
+    float: left;    
+    -webkit-animation-name: spinner2; 
+    -webkit-animation-duration: 1.6s; 
+    -webkit-animation-timing-function: cubic-bezier(0.075, 0.820, 0.165, 1.000);    
+    -webkit-animation-iteration-count: infinite; 
+    -webkit-animation-direction: normal;  
+}
+@-webkit-keyframes spinner2 {
+    0% {
+        box-shadow: inset 0 0 0 7px #3eb3df; 
+        opacity: 1;
+        border-radius: 50%;
+    }
+    25% {
+        box-shadow: inset 0 0 0 13px #33b9ea; 
+        opacity: 0.7;
+        border-radius: 20%;
+    }
+    75% {
+        box-shadow: inset 0 0 0 15px #1b5a71; 
+        opacity: 1;
+        border-radius: 0;
+    }
+    100% {
+        box-shadow: inset 0 0 0 0px #33b9ea;
+        opacity: 0.3;
+        border-radius: 50%;
+    }   
+}
+.spinner16 li:first-child {
+    -webkit-animation-delay: 0.1s; 
+}
+.spinner16 li:nth-child(2) {
+    -webkit-animation-delay: 0.2s; 
+}
+.spinner16 li:nth-child(3) {
+    -webkit-animation-delay: 0.3s; 
+}
+.spinner16 li:nth-child(4) {
+    -webkit-animation-delay: 0.4s; 
+}
+.spinner16 li:nth-child(5) {
+    -webkit-animation-delay: 0.5s; 
+}
+.spinner16 li:nth-child(6) {
+    -webkit-animation-delay: 0.6s; 
+}
+.spinner16 li:nth-child(7) {
+    -webkit-animation-delay: 0.7s; 
+}
+.spinner16 li:nth-child(8) {
+    -webkit-animation-delay: 0.8s; 
+}
+.spinner16 li:nth-child(9) {
+    -webkit-animation-delay: 0.9s; 
+}
 
 
 
