Visual Adjustments to Resume Image and Blog Posts

--- a/app/views/blogPost.html
+++ b/app/views/blogPost.html
@@ -1,7 +1,7 @@
 <div class="col-md-12" style="overflow:auto">
 	<span class="col-md-3 blog-date">{{blog.date}}</span>
 	<div class="col-md-9">
-		<img src="{{blog.image}}" class="img-rounded img-responsive" style="width:100%">
+		<img ng-src="{{blog.image}}" class="img-rounded img-responsive" style="width:100%;border:1px solid #34495E">
 		<br>
 		<div class="blog-title">{{blog.title}}</div>
 		<div ng-bind-html-unsafe="blog.body"></div>
