Implemented Like/Dislike on Blog Posts and hooked up the Backend

--- a/app/views/blogPost.html
+++ b/app/views/blogPost.html
@@ -9,10 +9,10 @@
 		<table class="col-md-12">
 			<tr>
 				<td style="width:50%">
-					<a class="btn btn-block btn-lg btn-success" ng-click="likeClicked(blog.id)">({{blog.likes}}) Likes</a>
+					<a class="btn btn-block btn-lg btn-success" ng-click="likeClicked(blog)">({{blog.likes}}) Likes</a>
 				</td>
 				<td style="width:50%">
-					<a class="btn btn-block btn-lg btn-danger" ng-click="dislikeClicked(blog.id)">({{blog.dislikes}}) Dislikes</a>
+					<a class="btn btn-block btn-lg btn-danger" ng-click="dislikeClicked(blog)">({{blog.dislikes}}) Dislikes</a>
 				</td>
 			</tr>
 		</table>
