--- a/views/navigation.html
+++ b/views/navigation.html
@@ -14,7 +14,7 @@
 		<li class="home-nav" ng-class="{ active: isActive('/blog') }">
 			<a href="#/blog">
 		    	<span class="fui-new"></span>
-		    	<span class="nav-item-title"> Blog</span>
+		    	<span class="nav-item-title"> Posts</span>
 			</a></li>
 		
 		<li class="home-nav" ng-class="{ active: isActive('/photo') }">
@@ -23,16 +23,16 @@
 		    	<span class="nav-item-title"> Photos</span>
 			</a></li>
 		
-<!-- 		<li class="home-nav" ng-class="{ active: isActive('/video') }">
+		<li class="home-nav" ng-class="{ active: isActive('/video') }">
 			<a href="#/video">
 		    	<span class="fui-video"></span>
-		    	<span> My Videos</span>
+		    	<span> Vlogs</span>
 			</a></li>
-		</li> -->
+		
 		<li class="home-nav" ng-class="{ active: isActive('/contact') }">
 			<a href="#/contact">
 		    	<span class="fui-mail"></span>
-		    	<span class="nav-item-title"> Contact Me</span>
+		    	<span class="nav-item-title"> Contact</span>
 			</a></li>
 		
 	</ul>
