Another revision to resume pdf

--- a/views/resumeView.html
+++ b/views/resumeView.html
@@ -6,10 +6,10 @@
 	</div>
 	<hr>
 </div>
-<a href="https://docs.google.com/file/d/0BzOndqQ2V47dbFFoNUJwTkpaSXc/preview?pli=1">
+<a href="https://docs.google.com/file/d/0BzOndqQ2V47dMkRBczlCdlhMcG8/preview">
 	<img src="https://docs.google.com/file/d/0BzOndqQ2V47dMkRBczlCdlhMcG8/image?pagenumber=1&w=1600" class="img-responsive resume-img col-md-12">
 </a>
 <br />
-<a href="https://docs.google.com/file/d/0BzOndqQ2V47dbFFoNUJwTkpaSXc/preview?pli=1">
-	<img src="https://docs.google.com/file/d/0BzOndqQ2V47dMkRBczlCdlhMcG8/image?pagenumber=1&w=1600" class="img-responsive resume-img col-md-12">
+<a href="https://docs.google.com/file/d/0BzOndqQ2V47dMkRBczlCdlhMcG8/preview">
+	<img src="https://docs.google.com/file/d/0BzOndqQ2V47dMkRBczlCdlhMcG8/image?pagenumber=2&w=1600" class="img-responsive resume-img col-md-12">
 </a>
